--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
@@ -16,7 +17,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.1.0"
+    "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "eslint": "^8",
