--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
     "flowbite-react": "^0.9.0",
+    "leaflet": "^1.9.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "react-leaflet": "^4.2.1",
     "react-toastify": "^10.0.5",
     "zod": "^3.23.6"
   },
