--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "cookies-next": "^4.1.1",
     "flowbite-react": "^0.9.0",
+    "khalti-checkout-web": "^2.2.0",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
     "react": "^18",
