--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "cookies-next": "^4.1.1",
     "flowbite-react": "^0.9.0",
     "js-cookie": "^3.0.5",
@@ -19,6 +20,7 @@
     "leaflet": "^1.9.4",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
