--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_BACKEND_URL=https://sahajyatraapi.onrender.com/api/v1/ 
+# NEXT_PUBLIC_BACKEND_URL=https://sahajyatraapi.onrender.com/api/v1/ 
 # NEXT_PUBLIC_BACKEND_URL=https://sahaj-yatra-api.onrender.com/api/v1gnpx 
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000/api/v1/
