--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_BACKEND_URL=https://sahajyatraapi-1.onrender.com/api/v1
+# NEXT_PUBLIC_BACKEND_URL=https://sahajyatraapi-1.onrender.com/api/v1
 # NEXT_PUBLIC_BACKEND_URL=https://sahaj-yatra-api.onrender.com/api/v1gnpx 
-# NEXT_PUBLIC_BACKEND_URL=http://localhost:8000/api/v1/
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000/api/v1/
